# amigatests

./: README.md
GadgetTemplate/: class_basename.h  class_basename_dispatch.c  class_basename_handleinput.c  class_basename_lib.c  class_basename_private.h  class_basename_render.c  minialib.h
boopsiwizard/: CMakeLists.txt  boopsiwizard.c
gelstest/: CMakeLists.txt  animtools.c  animtools.h
reactiondemo_gcc/: CMakeLists.txt  reactionImages.c  reactiondemo.c
rtgdualplayfield/: CMakeLists.txt  RTGDualPlayfield.c  dualplayfield.c  rtgdpfs.h  rtgdpfs_OCS.c  rtgdpfs_OCS.h  rtgdpfs_P96.c  rtgdpfs_P96.h  rtgdpfs_factory.c  rtgdpfs_factory.h  testrtgdpf.c
src/: CMakeLists.txt  datatypebm.c  datatypebm.h  datatypebm8b.c  datatypebm8b.h  datatypebmRGB.c  datatypebmRGB.h  gelstest.c  layerexperiments.c  reactiondemo.c  reactionexampl.readme  testScalePixelArray.c
src/boopsiwizard/: CMakeLists.txt  extracttemplate.c
src/classwizard/: CMakeLists.txt  class_keyboardview.h  class_keyboardview_attribs.c  class_keyboardview_dispatch.c  class_keyboardview_handleinput.c  class_keyboardview_lib.c  class_keyboardview_private.h  class_keyboardview_render.c  classinit.s  compilers.h  keyboardviewtest.c  makefile  minialib.h  reactioninlines.h  smakefile
src/classwizardtemplate/: CMakeLists.txt  basenametest.c  class_basename.h  class_basename_lib.c  class_basename_private.h  class_keyboardview.h  classinit.s  keyboardviewtest.c  makefile  smakefile
src/testcontrollers/: CMakeLists.txt  asmmacros.h  class_keyboardview.h  class_keyboardview_attribs.c  class_keyboardview_dispatch.c  class_keyboardview_handleinput.c  class_keyboardview_lib.c  class_keyboardview_private.h  class_keyboardview_render.c  classend.s  classinit.c  classinit.s  controllersviewclass.c  inputscheckup.c  keyboardviewclass.c  minialib.h  reactioninlines.h  smakefile  testcontrollers.c
templateGadget/: CMakeLists.txt  basenametest.c  smakefile
testcase_scalepixelarray/: CMakeLists.txt  datatypebmRGB.c  datatypebmRGB.h
